[package]
name = "kombi"
version = "0.1.1"
authors = ["Jess Schallenberg <jess.schallenberg@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Parser Combinator Library"
readme = "README.md"
repository = "https://github.com/jess-sch/kombi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
